--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ button:hover {
     transition: all 0.3s ease;
     max-width: fit-content;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+   width:100px;
 }
 
 #profile-container:hover {
