--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ button:hover {
     border: 1px solid rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(5px);
     transition: all 0.3s ease;
-    max-width: fit-content;
+    max-width: 100px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
    width:100px;
 }
