--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
     font-family: 'Poppins', Arial, sans-serif;
-    background: rgba(0, 0, 0, 0.6) url('https://media.discordapp.net/attachments/1340789491564281917/1340794718526767195/1739740774386.gif?ex=67cc0ba3&is=67caba23&hm=9657bda91f2083574bc9f8b5e02b3862f3c21120d942d192d6a73ae1b492f932&=');
+    background: rgba(0, 0, 0, 0.6) url('https://media.discordapp.net/attachments/1340789491564281917/1340794718526767195/1739740774386.gif?ex=67cc0ba3&is=67caba23&hm=9657bda91f2083574bc9f8b5e02b3862f3c21120d942d192d6a73ae1b492f932&');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
