--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
     font-family: 'Poppins', Arial, sans-serif;
-    background: rgba(0, 0, 0, 0.6) url('https://media.discordapp.net/attachments/1340789491564281917/1340794718526767195/1739740774386.gif?ex=67d00023&is=67ceaea3&hm=a5bfa10fd666ef9736d1d45653fba770225fe1021f08319d6cd5c6e3964541d2&=');
+    background: rgba(0, 0, 0, 0.6) url('https://cdn.discordapp.com/attachments/1340789491564281917/1340794718526767195/1739740774386.gif?ex=67d1fa63&is=67d0a8e3&hm=074e8d053940b68f94cde585ce08851fe3e21394493b3f8fe86cc66217728cf4&');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
