--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
     font-family: 'Poppins', Arial, sans-serif;
-    background: rgba(0, 0, 0, 0.6) url('https://cdn.discordapp.com/attachments/1340789491564281917/1340794718526767195/1739740774386.gif?ex=67dd2f23&is=67dbdda3&hm=66a3de426457aaf70257cf05f5bb71e3212163346ea4cde9861c5a05c1a8a0ba&');
+    background: rgba(0, 0, 0, 0.6) url('https://cdn.discordapp.com/banners/1325850250027597845/a_43970ce0bb676e58d0c4e04043a9d31b.gif?size=4096');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
